test/integration/k8s-manifests/authservice-e2e/templates/authservice-configmap.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: authservice-config
data:
  config.json: |
    {
      "listen_address": "0.0.0.0",
      "listen_port": "10003",
      "log_level": "trace",
      "threads": 8,
      "chains": [
        {
          "name": "idp_filter_chain",
          "filters": [
          {
            "oidc":
              {
                "authorization_uri": "https://localhost:8443/auth/realms/master/protocol/openid-connect/auth",
                "token_uri": "https://idp.default.svc.cluster.local:8443/auth/realms/master/protocol/openid-connect/token",
                "client_id": "authservice5",
                "client_secret": "secret5",
                "callback_uri": "https://localhost:9000/oauth/callback",
                "skip_verify_peer_cert": "true",
                "jwks_fetcher": {
                  "skip_verify_peer_cert": "true",
                  "jwks_uri": "https://idp.default.svc.cluster.local:8443/auth/realms/master/protocol/openid-connect/certs"
                },
                "scopes": [],
                "id_token": {
                  "preamble": "Bearer",
                  "header": "Authorization"
                },
                "logout": {
                  "path": "/logout",
                  "redirect_uri": "https://google.com"
                }
              }
            }
          ]
        }
      ]
    }
