test/integration/k8s-manifests/authservice-e2e/templates/authservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.e2e.yml -c --out e2e-k8s/authservice-e2e
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: authservice
  name: authservice
spec:
  ports:
    - name: "10003"
      port: 10003
      targetPort: 10003
  selector:
    io.kompose.service: authservice
status:
  loadBalancer: {}
