test/integration/k8s-manifests/authservice-e2e/templates/envoy-secret.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDVENDQWZHZ0F3SUJBZ0lVR0JZbFRRZFhOMXdGUUo0RVVLd01sUTg1M3Mwd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZERVNNQkFHQTFVRUF3d0piRzlqWVd4b2IzTjBNQjRYRFRJeE1ERXpNREE1TWpBd05Wb1hEVEl5TURFegpNREE1TWpBd05Wb3dGREVTTUJBR0ExVUVBd3dKYkc5allXeG9iM04wTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBdXd6YzBlOXZqODNYSDJETWczRncxV3VEZ2paWVI1ZVd6bXpzVkM5UEdrTWwKb1ZEZm8wYUxCTDlNekNWRnJkNmhlRmt1N2dFT2xZYjYvZ3BSc0dSdHdKTWYyVmwvU3ArT3F0UUl5aFpqMEkzNQpWOUw4emU3bndNQW1SV [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQzdETnpSNzIrUHpkY2YKWU15RGNYRFZhNE9DTmxoSGw1Yk9iT3hVTDA4YVF5V2hVTitqUm9zRXYwek1KVVd0M3FGNFdTN3VBUTZWaHZyKwpDbEd3WkczQWt4L1pXWDlLbjQ2cTFBaktGbVBRamZsWDB2ek43dWZBd0NaRmE5c3c4Qms5bnFPVWpiUkpVcEJiCmxFaWdVZjVNQ1FpckxwUHNCazh5bjdiWTE4b3RldDFxblM3M0hrQ3VjTlFlVTRuYTV6eStVcnNWRGZiSjRkK28KenFIRHZUVGhxL01ycjNzdjgrY1dzWlJGVHk0QkZkQlZlRTBxYlZCZE4yRzlYazZZRDVjTks1RE1qSlRHcDgvQwpuK3Y2TUk2VlpGeEc3Q [...]
kind: Secret
metadata:
  creationTimestamp: null
  name: envoy-secret
type: kubernetes.io/tls
