test/integration/k8s-manifests/authservice-e2e/templates/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.e2e.yml -c --out e2e-k8s/authservice-e2e
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: envoy
  name: envoy
spec:
  type: NodePort
  ports:
    - name: "9000"
      protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30001
  selector:
    io.kompose.service: envoy
status:
  loadBalancer: {}
