test/integration/k8s-manifests/authservice-e2e/templates/idp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.e2e.yml -c --out e2e-k8s/authservice-e2e
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: idp
  name: idp
spec:
  type: NodePort
  ports:
    - name: "8443"
      protocol: TCP
      port: 8443
      targetPort: 8443
      nodePort: 30002
  selector:
    io.kompose.service: idp
status:
  loadBalancer: {}
